--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <base href="/">
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -11,17 +23,25 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="google_maps_in_flutter">
+  <meta name="apple-mobile-web-app-title" content="flutter_web_test">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- TODO: Add your Google Maps API key here -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE0-qs6BZHX_MVeNgX-K8zvC043KX3Ecs"></script>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>google_maps_in_flutter</title>
+  <title>flutter_web_test</title>
   <link rel="manifest" href="manifest.json">
+
+<!-- TODO: Add your Google Maps API key here -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE0-qs6BZHX_MVeNgX-K8zvC043KX3Ecs&callback=Function.prototype"></script>
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
-
-
 <body>
   <script>
     window.addEventListener('load', function(ev) {
